--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gnosis/gp-v2-ui",
-  "description": "CowSwap - Gnosis Protocol",
+  "description": "CowSwap - Gnosis Protocol*",
   "homepage": ".",
   "private": true,
   "version": "0.17.0",
