--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
     
 
 env:
-  APP_ID: 1
+  REACT_METADATA_DIGEST_HEX: "0x816BBB5787AA2B72E2DE870A4E935A49A97305DE32E637B8126D07BEE10D03AB"
   REPO_NAME_SLUG: gpswapui
   PR_NUMBER: ${{ github.event.number }}
 
