--- a/.github/workflows/ipfs.yml
+++ b/.github/workflows/ipfs.yml
@@ -5,7 +5,7 @@ on:
     tags: [v*]
 
 env:
-  APP_ID: 1
+  REACT_METADATA_DIGEST_HEX: "0x816BBB5787AA2B72E2DE870A4E935A49A97305DE32E637B8126D07BEE10D03AB"
   REPO_NAME_SLUG: gpswapui
 
 jobs:
