Add $ to end of pattern

--- a/.env.production
+++ b/.env.production
@@ -27,8 +27,8 @@ REACT_APP_DOMAIN_REGEX_PR="^pr\d+--gpswapui\.review"
 REACT_APP_DOMAIN_REGEX_DEV="^cowswap\.dev"
 REACT_APP_DOMAIN_REGEX_STAGING="^cowswap\.staging"
 REACT_APP_DOMAIN_REGEX_PROD="^cowswap\.exchange$"
-REACT_APP_DOMAIN_REGEX_ENS="^cowswap\.eth"
-REACT_APP_DOMAIN_REGEX_BARN="^barn\.cowswap\.exchange"
+REACT_APP_DOMAIN_REGEX_ENS="^cowswap\.eth$"
+REACT_APP_DOMAIN_REGEX_BARN="^barn\.cowswap\.exchange$"
 
 # Analytics
 #REACT_APP_GOOGLE_ANALYTICS_ID_DEV="UA-190948266-3"
