Upload to ipfs + pin data function

--- a/package.json
+++ b/package.json
@@ -168,12 +168,14 @@
     "@gnosis.pm/cow-runner-game": "^0.2.9",
     "@gnosis.pm/dex-js": "^0.11.0",
     "@gnosis.pm/gp-v2-contracts": "^1.0.2",
+    "@pinata/sdk": "^1.1.23",
     "@sentry/react": "^6.11.0",
     "@sentry/tracing": "^6.11.0",
     "@uniswap/default-token-list": "^2.0.0",
     "@web3-react/walletconnect-connector": "^6.2.0",
     "bignumber.js": "9.0.1",
     "fast-safe-stringify": "^2.0.8",
+    "ipfs-core": "^0.10.4",
     "paraswap": "^4.18.0",
     "react-appzi": "^1.0.4",
     "react-inlinesvg": "^2.3.0",
