--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "homepage": ".",
   "private": true,
   "version": "1.1.0",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
     "@craco/craco": "^5.7.0",
