I've used the wrong syntax and forgot a few places

--- a/.github/workflows/ipfs.yml
+++ b/.github/workflows/ipfs.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up node
         uses: actions/setup-node@v2
         with:
-          node-version: lts
+          node-version: lts/*
 
       - name: Set output of cache
         id: yarn-cache
