--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Set up node
         uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: lts/*
 
       - name: Set output of cache
         id: yarn-cache
@@ -65,7 +65,7 @@ jobs:
       - name: Set up node
         uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: lts/*
 
       - name: Load dependencies
         id: cache-node-modules
@@ -96,7 +96,7 @@ jobs:
       - name: Set up node
         uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: lts/*
 
       - name: Load dependencies
         id: cache-node-modules
@@ -188,7 +188,7 @@ jobs:
       - name: Set up node
         uses: actions/setup-node@v2
         with:
-          node-version: lts
+          node-version: lts/*
 
       # - name: Download website
       #   uses: actions/download-artifact@v2
