--- a/package.json
+++ b/package.json
@@ -178,7 +178,7 @@
     "@web3-react/walletconnect-connector": "^6.2.0",
     "bignumber.js": "9.0.1",
     "fast-safe-stringify": "^2.0.8",
-    "ipfs-core": "^0.10.4",
+    "ipfs-http-client": "^52.0.3",
     "paraswap": "^4.18.0",
     "react-appzi": "^1.0.4",
     "react-inlinesvg": "^2.3.0",
