--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "ajv": "^6.12.3",
     "cids": "^1.0.0",
     "copy-to-clipboard": "^3.2.0",
+    "jest-styled-components": "^7.0.5",
     "cypress": "^7.7.0",
     "d3": "^7.0.0",
     "eslint": "^7.11.0",
