--- a/package.json
+++ b/package.json
@@ -117,7 +117,9 @@
     "workbox-routing": "^6.1.0",
     "workbox-strategies": "^6.1.0"
   },
-  "resolutions": {},
+  "resolutions": {
+    "@walletconnect/web3-provider": "1.4.2-rc.2"
+  },
   "scripts": {
     "start:default": "yarn i18n:extract && yarn compile-all-types && craco start",
     "start": "REACT_APP_DISABLE_TOKEN_WARNING=true yarn start:default",
