--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "workbox-strategies": "^6.1.0"
   },
   "resolutions": {
-    "@walletconnect/web3-provider": "1.4.2-rc.2"
+    "@walletconnect/ethereum-provider": "1.6.4"
   },
   "scripts": {
     "start:default": "yarn i18n:extract && yarn compile-all-types && craco start",
