--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "build": "yarn i18n:extract && yarn compile-all-types && craco build",
     "ipfs:build": "cross-env PUBLIC_URL=\".\" yarn build",
     "ipfs:publish": "ipfs-deploy build -p infura -O",
-    "test": "NODE_PATH=src/custom craco test --env=jsdom",
+    "test": "NODE_PATH=src/custom craco test --env=jsdom --ci",
     "test:debug": "NODE_PATH=src/custom craco --inspect-brk test --runInBand --no-cache",
     "eject": "react-scripts eject",
     "integration-test": "start-server-and-test 'serve build -l 3000' http://localhost:3000 'cypress run'",
