moved contract and lingui scripts to postinstall

--- a/package.json
+++ b/package.json
@@ -125,11 +125,11 @@
     "@walletconnect/ethereum-provider": "1.6.4"
   },
   "scripts": {
-    "start:default": "yarn i18n:extract && yarn compile-all-types && craco start",
+    "start:default": "craco start",
     "start": "REACT_APP_DISABLE_TOKEN_WARNING=true yarn start:default",
     "start:service-worker": "yarn build && yarn serve -s build",
     "mock": "REACT_APP_MOCK=true yarn start",
-    "build": "yarn i18n:extract && yarn compile-all-types && craco build",
+    "build": "craco build",
     "ipfs:build": "cross-env PUBLIC_URL=\".\" yarn build",
     "ipfs:publish": "ipfs-deploy build -p infura -O",
     "test": "NODE_PATH=src/custom craco test --env=jsdom",
@@ -139,11 +139,10 @@
     "serve": "serve build -l 3000",
     "serve:ci": "serve website -l 3000",
     "cypress": "cypress open",
-    "compile-contract-types": "yarn compile-external-abi-types",
-    "compile-external-abi-types": "typechain --target ethers-v5 --out-dir src/abis/types './src/abis/**/*.json'",
-    "compile-v3-contract-types": "typechain --target ethers-v5 --out-dir src/types/v3 './node_modules/@uniswap/?(v3-core|v3-periphery)/artifacts/contracts/**/*.json'",
-    "compile-all-types": "yarn compile-contract-types && yarn compile-v3-contract-types",
-    "postinstall": "yarn compile-contract-types",
+    "contracts:compile:abi": "typechain --target ethers-v5 --out-dir src/abis/types './src/abis/**/*.json'",
+    "contracts:compile:v3": "typechain --target ethers-v5 --out-dir src/types/v3 './node_modules/@uniswap/?(v3-core|v3-periphery)/artifacts/contracts/**/*.json'",
+    "contracts:compile": "yarn contracts:compile:abi && yarn contracts:compile:v3",
+    "postinstall": "yarn contracts:compile && yarn i18n:extract",
     "i18n:extract": "lingui extract --locale en-US",
     "i18n:compile": "lingui compile"
   },
