--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "start": "REACT_APP_DISABLE_TOKEN_WARNING=true yarn start:default",
     "start:service-worker": "yarn build && yarn serve -s build",
     "mock": "REACT_APP_MOCK=true yarn start",
-    "build": "craco build",
+    "build": "yarn i18n:extract & craco build",
     "ipfs:build": "cross-env PUBLIC_URL=\".\" yarn build",
     "ipfs:publish": "ipfs-deploy build -p infura -O",
     "test": "NODE_PATH=src/custom craco test --env=jsdom",
