--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,10 +56,12 @@ jobs:
         id: cache-compiled-types
         uses: actions/cache@v2
         with:
-          path: ~/src/abis/types
+          # TODO: Key is wrong. It should regenerate if any ABI changes, or if graphql changes
           key: ${{ runner.os }}-${{ matrix.node-version }}-compiledtypes-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ matrix.node-version }}-compiledtypes-
+          path: |
+            ~/src/abis/types
+            ~/src/state/data
+            ~/src/types/v3
 
       - name: Compile types
         if: steps.cache-compiled-types.outputs.cache-hit != 'true'
@@ -91,6 +93,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
 
+      - name: Cache compiled types
+        id: cache-compiled-types
+        uses: actions/cache@v2
+        with:
+          # TODO: Key is wrong. It should regenerate if any ABI changes, or if graphql changes
+          key: ${{ runner.os }}-${{ matrix.node-version }}-compiledtypes-${{ hashFiles('**/package.json') }}
+          path: |
+            ~/src/abis/types
+            ~/src/state/data
+            ~/src/types/v3
+
       - name: Unit Test
         run: yarn test
 
@@ -120,6 +133,17 @@ jobs:
           key: ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
+
+      - name: Cache compiled types
+        id: cache-compiled-types
+        uses: actions/cache@v2
+        with:
+          # TODO: Key is wrong. It should regenerate if any ABI changes, or if graphql changes
+          key: ${{ runner.os }}-${{ matrix.node-version }}-compiledtypes-${{ hashFiles('**/package.json') }}
+          path: |
+            ~/src/abis/types
+            ~/src/state/data
+            ~/src/types/v3
 
       - name: Run linters
         uses: wearerequired/lint-action@v1
@@ -152,14 +176,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
 
-      - name: Load compiled types
+      - name: Cache compiled types
         id: cache-compiled-types
         uses: actions/cache@v2
         with:
-          path: ~/src/abis/types
-          key: ${{ runner.os }}-${{ matrix.node-version }}-compiledtypes-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ matrix.node-version }}-compiledtypes-
+          # TODO: Key is wrong. It should regenerate if any ABI changes, or if graphql changes
+          key: ${{ runner.os }}-${{ matrix.node-version }}-compiledtypes-${{ hashFiles('**/package.json') }}
+          path: |
+            ~/src/abis/types
+            ~/src/state/data
+            ~/src/types/v3
 
       - name: Build Web Apps
         run: yarn build
