--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,21 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
 
+      - name: Cache compiled types
+        id: cache-compiled-types
+        uses: actions/cache@v2
+        with:
+          # TODO: Key is wrong. It should regenerate if any ABI changes, or if graphql changes
+          key: ${{ runner.os }}-${{ matrix.node-version }}-compiledtypes-${{ hashFiles('**/package.json') }}
+          path: |
+            ~/src/abis/types
+            ~/src/state/data
+            ~/src/types/v3
+
+      - name: Compile types
+        if: steps.cache-compiled-types.outputs.cache-hit != 'true'
+        run: yarn postinstall
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
@@ -77,6 +92,17 @@ jobs:
           key: ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
+
+      - name: Cache compiled types
+        id: cache-compiled-types
+        uses: actions/cache@v2
+        with:
+          # TODO: Key is wrong. It should regenerate if any ABI changes, or if graphql changes
+          key: ${{ runner.os }}-${{ matrix.node-version }}-compiledtypes-${{ hashFiles('**/package.json') }}
+          path: |
+            ~/src/abis/types
+            ~/src/state/data
+            ~/src/types/v3
 
       - name: Unit Test
         run: yarn test
@@ -108,6 +134,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
 
+      - name: Cache compiled types
+        id: cache-compiled-types
+        uses: actions/cache@v2
+        with:
+          # TODO: Key is wrong. It should regenerate if any ABI changes, or if graphql changes
+          key: ${{ runner.os }}-${{ matrix.node-version }}-compiledtypes-${{ hashFiles('**/package.json') }}
+          path: |
+            ~/src/abis/types
+            ~/src/state/data
+            ~/src/types/v3
+
       - name: Run linters
         uses: wearerequired/lint-action@v1
         with:
@@ -138,6 +175,17 @@ jobs:
           key: ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
+
+      - name: Cache compiled types
+        id: cache-compiled-types
+        uses: actions/cache@v2
+        with:
+          # TODO: Key is wrong. It should regenerate if any ABI changes, or if graphql changes
+          key: ${{ runner.os }}-${{ matrix.node-version }}-compiledtypes-${{ hashFiles('**/package.json') }}
+          path: |
+            ~/src/abis/types
+            ~/src/state/data
+            ~/src/types/v3
 
       - name: Build Web Apps
         run: yarn build
