--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,17 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
+      - name: Cache compiled files
+        id: cache-compiled-files
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/src/types/v3
+            ~/src/abis/types
+            ~/src/state/data
+            ~/src/locales
+          key: ${{ runner.os }}-compiledFiles-${{ hashFiles('**/yarn.lock') }}
+
   test:
     name: Test
     needs: setup
@@ -77,6 +88,17 @@ jobs:
           key: ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
+
+      - name: Load compiled files
+        id: cache-compiled-files
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/src/types/v3
+            ~/src/abis/types
+            ~/src/state/data
+            ~/src/locales
+          key: ${{ runner.os }}-compiledFiles-${{ hashFiles('**/yarn.lock') }}
 
       - name: Unit Test
         run: yarn test
@@ -108,6 +130,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
 
+      - name: Load compiled files
+        id: cache-compiled-files
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/src/types/v3
+            ~/src/abis/types
+            ~/src/state/data
+            ~/src/locales
+          key: ${{ runner.os }}-compiledFiles-${{ hashFiles('**/yarn.lock') }}
+
       - name: Run linters
         uses: wearerequired/lint-action@v1
         with:
@@ -138,6 +171,17 @@ jobs:
           key: ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
+
+      - name: Load compiled files
+        id: cache-compiled-files
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/src/types/v3
+            ~/src/abis/types
+            ~/src/state/data
+            ~/src/locales
+          key: ${{ runner.os }}-compiledFiles-${{ hashFiles('**/yarn.lock') }}
 
       - name: Build Web Apps
         run: yarn build
