--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,30 +52,19 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
 
-      - name: Cache compiled types
-        id: cache-compiled-types
-        uses: actions/cache@v2
-        with:
-          # TODO: Key is wrong. It should regenerate if any ABI changes, or if graphql changes
-          key: ${{ runner.os }}-${{ matrix.node-version }}-compiledtypes-${{ hashFiles('**/package.json') }}
-          path: |
-            ~/src/abis/types
-            ~/src/state/data
-            ~/src/types/v3
-
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Cache compiled files
-        id: cache-compiled-files
+      - name: Cache generated files
+        id: cache-generated-files
         uses: actions/cache@v2
         with:
           path: |
-            ~/src/types/v3
-            ~/src/abis/types
-            ~/src/state/data
-            ~/src/locales
-          key: ${{ runner.os }}-compiledFiles-${{ hashFiles('**/yarn.lock') }}
+            src/types/v3
+            src/abis/types
+            src/state/data
+            src/locales
+          key: ${{ runner.os }}-generatedFiles-${{ hashFiles('**/yarn.lock') }}
 
   test:
     name: Test
@@ -100,16 +89,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
 
-      - name: Load compiled files
-        id: cache-compiled-files
+      - name: Load generated files
+        id: cache-generated-files
         uses: actions/cache@v2
         with:
           path: |
-            ~/src/types/v3
-            ~/src/abis/types
-            ~/src/state/data
-            ~/src/locales
-          key: ${{ runner.os }}-compiledFiles-${{ hashFiles('**/yarn.lock') }}
+            src/types/v3
+            src/abis/types
+            src/state/data
+            src/locales
+          key: ${{ runner.os }}-generatedFiles-${{ hashFiles('**/yarn.lock') }}
 
       - name: Unit Test
         run: yarn test
@@ -141,16 +130,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
 
-      - name: Load compiled files
-        id: cache-compiled-files
+      - name: Load generated files
+        id: cache-generated-files
         uses: actions/cache@v2
         with:
           path: |
-            ~/src/types/v3
-            ~/src/abis/types
-            ~/src/state/data
-            ~/src/locales
-          key: ${{ runner.os }}-compiledFiles-${{ hashFiles('**/yarn.lock') }}
+            src/types/v3
+            src/abis/types
+            src/state/data
+            src/locales
+          key: ${{ runner.os }}-generatedFiles-${{ hashFiles('**/yarn.lock') }}
 
       - name: Run linters
         uses: wearerequired/lint-action@v1
@@ -183,16 +172,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
 
-      - name: Load compiled files
-        id: cache-compiled-files
+      - name: Load generated files
+        id: cache-generated-files
         uses: actions/cache@v2
         with:
           path: |
-            ~/src/types/v3
-            ~/src/abis/types
-            ~/src/state/data
-            ~/src/locales
-          key: ${{ runner.os }}-compiledFiles-${{ hashFiles('**/yarn.lock') }}
+            src/types/v3
+            src/abis/types
+            src/state/data
+            src/locales
+          key: ${{ runner.os }}-generatedFiles-${{ hashFiles('**/yarn.lock') }}
 
       - name: Build Web Apps
         run: yarn build
