--- a/package.json
+++ b/package.json
@@ -135,9 +135,7 @@
     "workbox-precaching": "^6.1.0",
     "workbox-routing": "^6.1.0"
   },
-  "resolutions": {
-    "@walletconnect/ethereum-provider": "1.6.4"
-  },
+  "resolutions": {},
   "scripts": {
     "start:default": "craco start",
     "start": "REACT_APP_DISABLE_TOKEN_WARNING=true yarn start:default",
