test ethereium provider 1.6.5

--- a/package.json
+++ b/package.json
@@ -135,7 +135,9 @@
     "workbox-precaching": "^6.1.0",
     "workbox-routing": "^6.1.0"
   },
-  "resolutions": {},
+  "resolutions": {
+    "@walletconnect/ethereum-provider": "1.6.5"
+  },
   "scripts": {
     "start:default": "craco start",
     "start": "REACT_APP_DISABLE_TOKEN_WARNING=true yarn start:default",
