--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Meta tags
-META_DESCRIPTION=Meta DEX Aggregator built by Gnosis that allows users to trade tokens with MEV protection, while using ETH-less/gas-less orders that are settled peer-to-peer among other users or into the best on-chain liquidity pool. Currently available in Ethereum & xDAI.
+REACT_APP_META_DESCRIPTION=Meta DEX Aggregator built by Gnosis that allows users to trade tokens with MEV protection, while using ETH-less/gas-less orders that are settled peer-to-peer among other users or into the best on-chain liquidity pool. Currently available in Ethereum & xDAI.
 
 
 # PRICE ESTIMATION
