--- a/.env
+++ b/.env
@@ -1,7 +1,3 @@
-# Meta tags
-REACT_APP_META_DESCRIPTION=Meta DEX Aggregator built by Gnosis that allows users to trade tokens with MEV protection, while using ETH-less/gas-less orders that are settled peer-to-peer among other users or into the best on-chain liquidity pool. Currently available in Ethereum & xDAI.
-
-
 # PRICE ESTIMATION
 REACT_APP_PRICE_FEED_GP_ENABLED=true
 REACT_APP_PRICE_FEED_PARASWAP_ENABLED=true
@@ -74,3 +70,6 @@ REACT_APP_PATH_REGEX_ENS="/ipfs"
 
 # Enables mock mode (default = true)
 REACT_APP_MOCK=true
+
+# Meta tags (max 200 characters)
+REACT_APP_META_DESCRIPTION=Ethereums MetaDEX Aggregator built by Gnosis. It allows users to trade tokens with MEV protection while using ETH-less orders that are settled p2p among users or into the best on-chain liquidity pool.
