issue #2011 update explorer URL (Barn and prod only)

--- a/.env.production
+++ b/.env.production
@@ -66,8 +66,8 @@ REACT_APP_PATH_REGEX_ENS="/ipfs"
 # EXPLORER
 #REACT_APP_EXPLORER_URL_DEV=https://protocol-explorer.dev.gnosisdev.com
 #REACT_APP_EXPLORER_URL_STAGING=https://protocol-explorer.staging.gnosisdev.com
-#REACT_APP_EXPLORER_URL_PROD=https://gnosis-protocol.io
-#REACT_APP_EXPLORER_URL_BARN=https://barn.gnosis-protocol.io
+#REACT_APP_EXPLORER_URL_PROD=https://explorer.cow.fi
+#REACT_APP_EXPLORER_URL_BARN=https://barn.explorer.cow.fi
 
 # Enables mock mode (default = false)
 REACT_APP_MOCK=false
