--- a/.env.production
+++ b/.env.production
@@ -56,9 +56,9 @@ REACT_APP_PATH_REGEX_ENS="/ipfs"
 #REACT_APP_SENTRY_AUTH_TOKEN='<sentry_auth_token>'
 
 # API
-#REACT_APP_API_URL_PROD_MAINNET=https://api.cow.fi/mainnet
-#REACT_APP_API_URL_PROD_RINKEBY=https://api.cow.fi/rinkeby
-#REACT_APP_API_URL_PROD_XDAI=https://api.cow.fi/xdai
+#REACT_APP_API_URL_PROD_MAINNET=https://api.cow.fi/mainnet/api
+#REACT_APP_API_URL_PROD_RINKEBY=https://api.cow.fi/rinkeby/api
+#REACT_APP_API_URL_PROD_XDAI=https://api.cow.fi/xdai/api
 #REACT_APP_API_URL_STAGING_MAINNET=https://protocol-mainnet.dev.gnosisdev.com/api
 #REACT_APP_API_URL_STAGING_RINKEBY=https://protocol-rinkeby.dev.gnosisdev.com/api
 #REACT_APP_API_URL_STAGING_XDAI=https://protocol-xdai.dev.gnosisdev.com/api
