--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -21,6 +21,6 @@ jobs:
           path-to-signatures: 'signatures/version1/cla.json'
           path-to-cla-document: 'https://github.com/gnosis/cowswap/blob/develop/docs/GNOSIS_CLA.md'
           branch: 'cla-signatures'
-          allowlist: dependabot,mergify,alfetopito,anxolin,W3stside,nenadV91,biocom,alongoni,annamsgeorge,avsavsavs,biocom,c3rnst,cmagan,davidalbela,fedgiac,elena-zh,fleupold,giacomolicari,GabrielCamba,nlordell,ramirotw,josojo
+          allowlist: dependabot,mergify,alfetopito,anxolin,W3stside,nenadV91,biocom,annamsgeorge,avsavsavs,biocom,c3rnst,cmagan,josojo,davidalbela,fedgiac,fleupold,giacomolicari,GabrielCamba,nlordell,alongoni,elena-zh,henrypalacios,matextrem,ramirotw
           empty-commit-flag: false
           blockchain-storage-flag: false
