--- a/package.json
+++ b/package.json
@@ -223,6 +223,7 @@
     "bnc-sdk": "^3.5.0",
     "fast-safe-stringify": "^2.0.8",
     "firebase": "^9.1.3",
+    "fortmatic": "^2.2.1",
     "ipfs-http-client": "^52.0.3",
     "paraswap": "^5.0.1",
     "react-appzi": "^1.0.4",
