--- a/package.json
+++ b/package.json
@@ -150,6 +150,9 @@
     "use-count-up": "^2.2.5",
     "wcag-contrast": "^3.0.0",
     "web-vitals": "^2.1.0",
+    "web3": "^1.7.0",
+    "web3-providers-http": "^1.7.0",
+    "web3-providers-ws": "^1.7.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "workbox-core": "^6.1.0",
     "workbox-precaching": "^6.1.0",
@@ -225,7 +228,7 @@
     "fast-safe-stringify": "^2.0.8",
     "firebase": "^9.1.3",
     "ipfs-http-client": "^52.0.3",
-    "paraswap": "^5.0.1",
+    "paraswap": "npm:@nenad91/paraswap#5.1.0",
     "react-appzi": "^1.0.4",
     "react-inlinesvg": "^2.3.0",
     "react-router-hash-link": "^2.4.0",
